# ArchCraftsman

./: .bandit  .gitignore  .pylintrc  LICENSE  NOTICES  README.md  archcraftsman.py  archlinux-install  archlinux_install.py  format  genchanges.py  launcher.py  modules_list  publish  release  requirements.txt  setup.cfg  sshcopy  test.py  wbuild
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: main.yml  test.yml
archcraftsman/: __main__.py  arguments.py  autopart.py  base.py  basesetup.py  btrfs.py  config.py  disk.py  globalargs.py  globalinfo.py  i18n.py  imessages.py  info.py  installer.py  manualpart.py  options.py  packages.py  partition.py  partitioninginfo.py  prelaunchinfo.py  shell.py  systeminfo.py  utils.py
archcraftsman/bundles/: budgie.py  bundle.py  cinnamon.py  copyacm.py  cups.py  cutefish.py  deepin.py  enlightenment.py  generateconfig.py  genericbundle.py  gnome.py  grmlzsh.py  grub.py  i3.py  iwd.py  linux.py  lxqt.py  mainfilesystems.py  mainfonts.py  mate.py  microcodes.py  networkmanager.py  nvidia.py  pipewire.py  plasma.py  sway.py  utils.py  (+5 more)
configs/: current_gnome_minimal_all_bundles.json  current_plasma_minimal_wayland_all_bundles.json  lts_none_no_bundles.json  zen_xfce_minimal_dm_all_bundles.json
locales/: fr.po
src/: archcraftsman.py  autopart.py  basesetup.py  disk.py  envsetup.py  globalargs.py  i18n.py  installer.py  localesetup.py  manualpart.py  options.py  packages.py  partition.py  partitioninginfo.py  prelaunchinfo.py  setups.py  shell.py  syssetup.py  systeminfo.py  systemsetup.py  utils.py
(+48 files in other folders)
