[metadata]
name = archcraftsman
version = 3.5.6
author = Rawleenc
description = The careful yet very fast Arch Linux Craftsman ensuring minimal user interactions.
long_description = file: README.md, LICENSE.txt
keywords = linux, fast, installer, script, archlinux, quickstart, archcraftsman
license = GPL-3.0
classifiers =
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find:
python_requires = >=3.10
install_requires =

[options.entry_points]
console_scripts =
    executable-name = archcraftsman.installer