[metadata]
name = archcraftsman
version = 3.5.11
url = https://github.com/Rawleenc/ArchCraftsman
project_urls =
    Bug Tracker = https://github.com/Rawleenc/ArchCraftsman/issues
author = Rawleenc
description = The careful yet very fast Arch Linux Craftsman ensuring minimal user interactions.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = linux, fast, installer, script, archlinux, quickstart, archcraftsman
license = GPL-3.0
classifiers =
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find:
python_requires = >=3.10
install_requires =

[options.package_data]
* = *.po

[options.entry_points]
console_scripts =
    archcraftsman = archcraftsman.installer:main
